--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-detalle-factura-proyectos/form-detalle-factura-proyectos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-detalle-factura-proyectos/form-detalle-factura-proyectos.component.html
@@ -52,7 +52,8 @@
                 <app-form-proyecto  [proyecto]="proyecto"
                                     [contrato]="contrato"
                                     [listaMenusId]="listaMenusId"
-                                    [registrarSolicitudPagoObs]="registrarSolicitudPagoObs">
+                                    [registrarSolicitudPagoObs]="registrarSolicitudPagoObs"
+                                    (estadoSemaforoProyecto)="proyecto.get( 'registroCompleto' ).setValue( $event );checkRegistroCompleto()">
                 </app-form-proyecto>
             </div>
         </div>
