--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/form-generar-acta-inicio-const-tecnico/form-generar-acta-inicio-const-tecnico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/form-generar-acta-inicio-const-tecnico/form-generar-acta-inicio-const-tecnico.component.html
@@ -64,11 +64,11 @@
         <p>
           <strong>Nombre de la entidad contratista de interventoría: </strong>{{ this.nombreEntidadContratistaObra }}
         </p>
-        <p>
+        <p *ngIf="contrato.usuarioInterventoria !== undefined">
           <strong>Número de identificación Supervisor: </strong>
           {{ this.contrato.usuarioInterventoria.numeroIdentificacion }}
         </p>
-        <p>
+        <p *ngIf="contrato.usuarioInterventoria !== undefined">
           <strong>Nombre Supervisor: </strong>{{ this.contrato.usuarioInterventoria.primerNombre }}
           {{ this.contrato.usuarioInterventoria.primerApellido }}
         </p>
