--- a/asivamosffie.web/asivamosffie/src/app/_pages/crear-proyecto-tecnico/components/formulario-proyectos/formulario-proyectos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/crear-proyecto-tecnico/components/formulario-proyectos/formulario-proyectos.component.html
@@ -370,7 +370,7 @@
                   maxlength="15"
                   required
                   type="number"
-                  value="{{ CodigoDaneIE }}"
+                  value="{{ proyecto.institucionEducativa.codigoDane }}"
                   #codigoDane
                   readonly
                   [disabled]="!bitPuedoEditar"
