ajustes de Invitación Cerrada en ver detalle editar

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/proponentes-seleccionados-invitacion-cerrada/proponentes-seleccionados-invitacion-cerrada.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/proponentes-seleccionados-invitacion-cerrada/proponentes-seleccionados-invitacion-cerrada.component.html
@@ -141,7 +141,7 @@
           #proponente
           [procesoSeleccion]="procesoSeleccion"
           [noTanNuevo]="true"
-          [amountNuevosProponentes]="amountNuevosProponentes(amountNuevosProponentes)"
+          [amountNuevosProponentes]="addressForm.get('cuantosProponentes').value"
           [procesoSeleccionProponente]="addressForm.get('nombresProponentes').value"
           (guardar)="onSubmitNuevoProponente()"
         >
