--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-datos-proponentes-nuevo/form-datos-proponentes-nuevo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-datos-proponentes-nuevo/form-datos-proponentes-nuevo.component.html
@@ -4,41 +4,47 @@
       <div *ngFor="let proponente of proponentesField.controls; let j = index" [formGroupName]="j">
         <mat-card-title class="header-card--text"> Proponente Nuevo {{ j + 1 }}</mat-card-title>
         <div class="row">
-          <div class="pr-1">
-            <label
-              class="label-left"
-              for="tipoProponenteCodigo"
-              [class.color-secondaryColor]="
-                (proponente.get('tipoProponenteCodigo').invalid && proponente.get('tipoProponenteCodigo').touched) ||
-                (proponente.get('tipoProponenteCodigo').invalid && estaEditando)
-              "
-            >
-              Tipos de proponente nuevo
-            </label>
+          <div class="col-md-8">
+            <div class="row">
+              <div class="pr-1">
+                <label
+                  class="label-left"
+                  for="tipoProponenteCodigo"
+                  [class.color-secondaryColor]="
+                    (proponente.get('tipoProponenteCodigo').invalid &&
+                      proponente.get('tipoProponenteCodigo').touched) ||
+                    (proponente.get('tipoProponenteCodigo').invalid && estaEditando)
+                  "
+                >
+                  Tipos de proponente nuevo
+                </label>
+              </div>
+              <div class="col d-flex">
+                <mat-form-field class="select-width">
+                  <mat-select formControlName="tipoProponenteCodigo" (selectionChange)="limpiarForms()" required>
+                    <mat-option *ngFor="let proponenteName of listaProponentes" [value]="proponenteName.codigo">
+                      {{ proponenteName.nombre }}
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+              <span class="icon-incompleto">
+                <img
+                  class="icon-incompleto--img"
+                  src="assets/img/icon/incompleto.svg"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
+                  *ngIf="
+                    (proponente.get('tipoProponenteCodigo').invalid &&
+                      proponente.get('tipoProponenteCodigo').touched) ||
+                    (proponente.get('tipoProponenteCodigo').invalid && estaEditando)
+                  "
+                />
+              </span>
+            </div>
           </div>
-          <div class="col-md-6">
-            <mat-form-field class="select-width">
-              <mat-select formControlName="tipoProponenteCodigo" (selectionChange)="limpiarForms()" required>
-                <mat-option *ngFor="let proponenteName of listaProponentes" [value]="proponenteName.codigo">
-                  {{ proponenteName.nombre }}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
-          </div>
-          <span class="icon-incompleto">
-            <img
-              class="icon-incompleto--img"
-              src="assets/img/icon/incompleto.svg"
-              alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
-              *ngIf="
-                (proponente.get('tipoProponenteCodigo').invalid && proponente.get('tipoProponenteCodigo').touched) ||
-                (proponente.get('tipoProponenteCodigo').invalid && estaEditando)
-              "
-            />
-          </span>
         </div>
         <div *ngIf="proponente.get('tipoProponenteCodigo').value == 4">
           <div class="row">
@@ -756,7 +762,13 @@
           </div>
         </div>
         <div class="text-center">
-          <button mat-button color="warn" class="btn-guardar" type="submit" *ngIf="j + 1 === proponentesField.controls.length">
+          <button
+            mat-button
+            color="warn"
+            class="btn-guardar"
+            type="submit"
+            *ngIf="j + 1 === proponentesField.controls.length"
+          >
             <img src="assets/img/icon/guardar.svg" alt="Guardar" />
           </button>
         </div>
