--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-demandantes-convocantes-dj/form-demandantes-convocantes-dj.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-demandantes-convocantes-dj/form-demandantes-convocantes-dj.component.html
@@ -132,7 +132,7 @@
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
-                                <span class="icon-incompleto">
+                                <span class="icon-incompleto m-0">
                                     <img
                                       class="icon-incompleto--img"
                                       src="assets/img/icon/incompleto.svg"
