--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-requisitos-construccion/components/manejo-anticipo-artc/manejo-anticipo-artc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-requisitos-construccion/components/manejo-anticipo-artc/manejo-anticipo-artc.component.html
@@ -3,15 +3,10 @@
     <mat-card-content>
       <p style="margin-left: 2em">
         <b>¿El contrato requiere anticipo?</b>:
-        {{
-          contratacion.manejoAnticipoRequiere !== undefined
-            ? contratacion.manejoAnticipoRequiere === true
-              ? 'Si'
-              : 'No'
-            : ''
+        {{ contratacion.manejoAnticipoRequiere !== undefined ? contratacion.manejoAnticipoRequiere === true ? 'Si' : 'No' : ''
         }}
       </p>
-      <p style="margin-left: 2em">
+      <p style="margin-left: 2em" *ngIf="contratacion.manejoAnticipoRequiere === true">
         <b>¿Cuenta con plan de inversión aprobado para el anticipo?</b>:
         {{
           contratacion.manejoAnticipoPlanInversion !== undefined
@@ -21,7 +16,7 @@
             : ''
         }}
       </p>
-      <p style="margin-left: 2em">
+      <p style="margin-left: 2em" *ngIf="contratacion.manejoAnticipoRequiere === true">
         <b>¿Cuenta con cronograma de amortización aprobado?</b>:
         {{
           contratacion.manejoAnticipoCronogramaAmortizacion !== undefined
@@ -34,7 +29,7 @@
     </mat-card-content>
   </mat-card>
 </div>
-<div align="left" *ngIf="contratacion" style="margin-left: 7em">
+<div align="left" *ngIf="contratacion && contratacion.manejoAnticipoRequiere === true" style="margin-left: 7em">
   <p><b>URL con soporte</b>: {{ contratacion.manejoAnticipoRutaSoporte }}</p>
 </div>
 <div align="center" class="mt-2em" *ngIf="contratacion.observacionManejoAnticipoApoyo !== undefined">
